# honeypot

./: .dockerignore  .gitignore  README.md  configuration.conf  deployEnv.sh  honeypot.sln  kind-multinode.yaml  logs.txt  project.env  registry.yaml  remove_all.sh  setupDep.sh  skaffold.env  skaffold.yaml  start.sh
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: adservice.yaml  cartservice.yaml  checkoutservice.yaml  currencyservice.yaml  emailservice.yaml  frontend.yaml  paymentservice.yaml  productcatalogservice.yaml  recommendationservice.yaml  shippingservice.yaml
helm-charts/: Chart.yaml  values.yaml
helm-charts/additions/: Chart.yaml  values.yaml
helm-charts/astronomy-shop/: Chart.yaml  values.yaml
helm-charts/flagd/: demo.flagd.json
helm-charts/scripts/: update-images.sh
helm-charts/telemetry/: Chart.yaml  values-auth.yaml  values-noauth.yaml  values.yaml
helm-charts/templates/: _helpers.tpl  _objects.tpl  _pod.tpl  accounting.yaml  ad.yaml  caldera.yaml  cart.yaml  checkout.yaml  common.yaml  component.yaml  compromised-image.yaml  currency.yaml  email.yaml  flagd.yaml  fraud-detection.yaml  frontend-proxy.yaml  frontend.yaml  grafana.yaml  image-provider.yaml  image-updater.yaml  jaeger.yaml  kafka.yaml  loadgenerator.yaml  network-policies.yaml  opensearch.yaml  otel-collector.yaml  payment.yaml  postgres.yaml  product-catalog-products.yaml  product-catalog.yaml  (+7 more)
k8s_manifests/: accounting-deployment.yaml  accounting-service.yaml  ad-deployment.yaml  ad-service.yaml  apply_all.sh  cart-deployment.yaml  cart-service.yaml  checkout-deployment.yaml  checkout-service.yaml  configmap.yaml  currency-deployment.yaml  currency-service.yaml  email-deployment.yaml  email-service.yaml  flagd-deployment.yaml  flagd-service.yaml  flagd-ui-deployment.yaml  flagd-ui-service.yaml  fraud-detection-deployment.yaml  fraud-detection-service.yaml  frontend-deployment.yaml  frontend-proxy-deployment.yaml  frontend-proxy-service.yaml  frontend-service.yaml  grafana-deployment.yaml  grafana-service.yaml  image-provider-deployment.yaml  image-provider-service.yaml  jaeger-deployment.yaml  jaeger-service.yaml  kafka-deployment.yaml  kafka-pvc.yaml  kafka-service.yaml  load-generator-deployment.yaml  load-generator-service.yaml  opensearch-deployment.yaml  opensearch-pvc.yaml  opensearch-service.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  (+18 more)
scripts/: 00_install_deps.sh  01_kind_cluster.sh  02_credentials_tls.sh  02_helm_repos.sh  03_registry.sh  05_caldera.sh  05_docker_network.sh  05_skaffold_build.sh  06_caldera.sh  06_skaffold_deploy.sh  07_skaffold_deploy.sh
src/currency/: CMakeLists.txt  Dockerfile
src/currency/data/: debug.txt  log.txt
src/currency/genproto/: Dockerfile
src/currency/src/: file_mirror_http.cpp  file_mirror_http.h  flagd_client.cpp  flagd_client.h  logger_common.h  meter_common.h  server.cpp  server.hpp  tracer_common.h
src/shipping/: Cargo.toml  Dockerfile
src/shipping/src/: shipping_service.rs
src/shipping/src/telemetry/: logs_conf.rs
(+348 files in other folders)
