

[package]
name = "shipping"
version = "1.8.0"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "=0.11.0"
tonic-health = "=0.11.0"
reqwest = { version = "=0.11.27", default-features = false, features = ["json"] }
prost = "=0.12.6"
prost-types = "=0.12.6"
tokio = { version = "=1.38.0", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "=0.22.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.22.1", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "=0.15.0"
opentelemetry-http = "=0.11.1"
opentelemetry-otlp = { version = "=0.15.0", features = ["tonic"] }
log = "=0.4.21"
simplelog = "=0.12.2"
reqwest-middleware = "=0.2.5"
reqwest-tracing = { version = "=0.4.8", features = ["opentelemetry_0_22"] }
tracing = { version = "=0.1.40", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = "=0.23.0"
tracing-subscriber = "=0.3.18"

[dependencies.uuid]
version = "=1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "=0.11.0"
